--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Entrega del trabajo practico N1 - Grupo 33</h1>
 
-    <h2>Alumnos: Matais Fleitas, Santiago Reyes y Leonel Sardina</h2>
+    <h2>Alumnos: Matias Fleitas, Santiago Reyes y Leonel Sardina</h2>
 
     <section>
         <a class="card" target="_blank" href="https://www.figma.com/design/0FetV8bs5hMyAwEskL2wbE/TPE-InterfacesDeUsuario-Grupo33?node-id=0-1&node-type=canvas&t=guUeCsHrXiBBrifv-0">
