primer entrega TP1

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -15,7 +15,7 @@
             <h2>Link a proyecto, design system</h2>
         </a>
     
-        <a class="card" href="https://www.figma.com/proto/0FetV8bs5hMyAwEskL2wbE/TPE-InterfacesDeUsuario-Grupo33?node-id=185-13467&node-type=frame&t=guUeCsHrXiBBrifv-0&scaling=min-zoom&content-scaling=fixed&page-id=128%3A4185&starting-point-node-id=185%3A13467">
+        <a class="card" href="https://www.figma.com/proto/0FetV8bs5hMyAwEskL2wbE/TPE-InterfacesDeUsuario-Grupo33?node-id=185-13467&node-type=frame&t=guUeCsHrXiBBrifv-0&scaling=min-zoom&content-scaling=fixed&page-id=128%3A4185&starting-point-node-id=185%3A13467&hide-ui=1">
             <h2>Link a presentacion, visualizacion del sitio</h2>
         </a>
     </section>
