primer entrega TP1

--- a/TP1/EntregaFinal/index.html
+++ b/TP1/EntregaFinal/index.html
@@ -11,11 +11,11 @@
     <h2>Alumnos: Matias Fleitas, Santiago Reyes y Leonel Sardina</h2>
 
     <section>
-        <a class="card" target="_blank" href="https://www.figma.com/design/0FetV8bs5hMyAwEskL2wbE/TPE-InterfacesDeUsuario-Grupo33?node-id=0-1&node-type=canvas&t=guUeCsHrXiBBrifv-0">
+        <a class="card" target="_blank" href="https://www.figma.com/design/0FetV8bs5hMyAwEskL2wbE/TPE-InterfacesDeUsuario-Grupo33?node-id=0-1&t=fNA9tvPsyXfbWQRQ-1">
             <h2>Link a proyecto, design system</h2>
         </a>
     
-        <a class="card" href="https://www.figma.com/proto/0FetV8bs5hMyAwEskL2wbE/TPE-InterfacesDeUsuario-Grupo33?node-id=185-13467&node-type=frame&t=guUeCsHrXiBBrifv-0&scaling=min-zoom&content-scaling=fixed&page-id=128%3A4185&starting-point-node-id=185%3A13467&hide-ui=1">
+        <a class="card" href="https://www.figma.com/proto/0FetV8bs5hMyAwEskL2wbE/TPE-InterfacesDeUsuario-Grupo33?page-id=128%3A4185&node-id=185-13467&node-type=frame&viewport=45%2C207%2C0.07&t=0kg9FFNZYGuEYEe4-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=185%3A13467">
             <h2>Link a presentacion, visualizacion del sitio</h2>
         </a>
     </section>
