Header en proceso 50%

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -4,16 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cipher Gaminig</title>
+    <title>Cipher Gaming</title>
     <link rel="stylesheet" href="css/css.css">
 </head>
 
 <body>
+
     <header class="navbar">
-        <div class="navbarParte">
-            <a href=""> <img src="" alt=""> Aca va el logo
-            </a>
+
+        <div class="nabvar-hamburguesa">
+            <a href=""> img hamburguesa<img src="" alt="btnHamburguesa"> </a>
         </div>
+
+        <div class="navbar-contenedor-logo">
+            <div class="navbar-logo-img">
+                <a href=""> <img class="navbar-logo" src="img/logo/logo.png" height="40rem" width="40rem" alt=" logo">
+                </a>
+            </div>
+            <div class="navbar-title">CYPHER GAMING</div>
+        </div>
+
+        <div class="conteiner-lupa"> soy lupa
+        </div>
+
+        <div class="conteiner-user"> soy user
+        </div>
+
     </header>
     <main> soy main</main>
     <footer>soy footer</footer>
