--- a/TP2/EntregaFinal/html/singUp.html
+++ b/TP2/EntregaFinal/html/singUp.html
@@ -7,6 +7,82 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h2>Hola, nacho aprobo</h2>
+    <div class="registerContainer">
+        <button class="close-btn">×</button> 
+
+        <h1>Registrarse</h1>
+
+        <form action="" class="register-form">
+            <!--nombre completo-->
+            <div class="form">
+                <input type="text" id="full-name" name="full_name" placeholder="Ingrese su nombre completo" required>
+            </div>
+
+            <!--correo-->>
+            <div class="form">
+                <input type="email" id="email" name="email" placeholder="Ingrese su correo" required>
+            </div>
+
+            <!--userName, sera la que aparecera al lado del icono-->
+            <div class="form">
+                <input type="text" id="username" name="username" placeholder="Elige su nombre de usuario" required>
+            </div>
+
+            <!-- Contraseña -->
+            <div class="form">
+                <input type="password" id="password" name="password" placeholder="Ingrese su contraseña" required>
+            </div>
+
+            <div class="form">
+                <input type="password" id="confirm-password" name="confirm_password" placeholder="Confirme su contraseña" required>
+            </div>
+
+            <!-- Fecha de nacimiento -->
+            <div class="form">
+                <label for="date">Fecha de nacimiento</label>
+                <select id="day" name="day" required>
+                    <option value="" disabled selected>Día</option>
+                    <!-- dias -->
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+        
+                </select>
+
+                <select id="month" name="month" required>
+                    <option value="" disabled selected>Mes</option>
+                    <!-- meses -->
+                    <option value="1">Enero</option>
+                    <option value="2">Febrero</option>
+                    
+                </select>
+
+                <select id="year" name="year" required>
+                    <option value="" disabled selected>Año</option>
+                    <!-- año -->
+                    <option value="2000">2000</option>
+                    <option value="2001">2001</option>
+                </select>
+            </div>
+
+            <!-- captcha -->
+            <div class="form-group">
+                <div class="recaptcha">
+                    <!--ver como implementar-->
+                </div>
+            </div>
+
+            <!--btn registro -->
+            <div class="form-group">
+                <button type="submit" class="btn-submit">Registrarse</button>
+            </div>
+
+            <!-- redes sociales -->
+            <div class="social-login">
+                <p>O regístrate con</p>
+                <button class="social-btn facebook-btn">Facebook</button>
+                <button class="social-btn google-btn">Google</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
