--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -44,7 +44,14 @@
         </div>
 
     </header>
-    <main> </main>
+    <main>
+        <div class="contenedor-carruselPrincipal">
+            <div class="carrusel-titulo"></div>
+            <div class="carrusel-principal">
+
+            </div>
+        </div>
+    </main>
     <footer></footer>
 
 </body>
