guardado de cambios locales

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -4,18 +4,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cipher Gaminig</title>
-    <link rel="stylesheet" href="css/css.css">
+    <title>Cypher Gaming</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="navbar">
         <div class="navbarParte">
-            <a href=""> <img src="" alt=""> Aca va el logo
-            </a>
+            <a href=""> <img src="" alt=""> Aca va el logo</a>
         </div>
     </header>
     <main> soy main</main>
-    <footer>soy footer</footer>
+    <footer>
+        <div class="container-footer">
+            <section class="footer-logo">
+                <img src="assets/logo.jfif" alt="logoPag" class="logo-footer">
+                <h3>Cypher Gaming</h3>
+                <h3>2017-2024 CypherGaming.Inc.</h3>
+            </section>
+            <section class="footer-links">
+                <div class="footer-colum">
+                    <h4>Categorias</h4>
+                    <ul>
+                        <li><a href="">Lanzamientos</a></li>
+                        <li><a href="#">Ofertas</a></li>
+                        <li><a href="#">Próximos</a></li>
+                        <li><a href="#">Top 100 juegos</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="footer-links">
+                <div class="footer-colum">
+                    <h4>Mi Cuenta</h4>
+                    <ul>
+                        <li><a href="#">Logros</a></li>
+                        <li><a href="#">Informe</a></li>
+                        <li><a href="#">Historial de compra</a></li>
+                        <li><a href="#">Registro de transacciones</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="footer-links">
+                <div class="footer-colum">
+                    <h4>Acerca de Nosotros</h4>
+                    <ul>
+                        <li><a href="#">Nuestra historia</a></li>
+                        <li><a href="#">Equipo de trabajo</a></li>
+                        <li><a href="#">Misión y visión</a></li>
+                        <li><a href="#">Trabaja con nosotros</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="footer-links"></section>
+                <div class="footer-colum">
+                    <h4>Ayuda</h4>
+                    <ul>
+                        <li><a href="#">Soporte</a></li>
+                        <li><a href="#"><p>Problemas de Comunicacion</p></a></li>
+                        <li><a href="#">Preguntas Frecuentes</a></li>
+                        <li><a href="#">Terminos y Condiciones</a></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="footer-links"></section>
+                <div class="footer-colum">
+                    <h4>Comunidad</h4>
+                    <ul>
+                        <li><a href="#">Foros</a></li>
+                        <li><a href="#">Noticias de la Comunidad</a></li>
+                        <li><a href="#"><img src="assets/BtnFacebook.png" alt="logoFacebook"></a></li>
+                        <li><a href="#"><img src="assets/TwitterIcon.png" alt="logoX"></a></li>
+                       </ul>
+                </div>
+            </section>
+        </div>
+    </footer>
 
 </body>
 
