Carrusel Primary en  Proceso:60%

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <<<<<<< HEAD <title>Cypher Gaming</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai:wght@400;500;600;700;800&display=swap"
-            rel="stylesheet">
-        =======
-        <title>Cipher Gaming</title>
-        <link rel="stylesheet" href="css/Style.css">
-        >>>>>>> Carrusel
+    <title>Cypher Gaming</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
+    <title>Cipher Gaming</title>
+    <link rel="stylesheet" href="css/Style.css">
 </head>
 
 <body>
@@ -110,7 +108,6 @@
     <footer></footer>
 
     <script type="text/javascript" src="js/js.js"></script>
-    >>>>>>> Carrusel
 </body>
 
 </html>
