Carrusel Primary en estado: 70%

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
     <title>Cipher Gaming</title>
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 
         <div class="conteiner-user">
             <button class="btn-sesion" popovertarget="id-popover">
-                <h3>Iniciar Sesión</h3>
+                <h3 class="sesion-text">Iniciar Sesión</h3>
             </button>
         </div>
 
@@ -88,13 +88,13 @@
                 <div class="card-game"> <img class="card-img-game" src="img/card/CardBatman.png" alt=""></div>
                 <div class="card-game"> <img class="card-img-game" src="img/card/CardBatman.png" alt=""></div>
                 <div class="card-game"> <img class="card-img-game" src="img/card/CardBatman.png" alt=""></div>
-                <button id="btn-next" class="btn-card-game-arrow  arrowRigth">
+                <button class="btn-card-game-arrow  arrowRigth">
                     <svg xmlns="http://www.w3.org/2000/svg" width="62" height="99" viewBox="0 0 62 99" fill="none">
                         <path fill-rule="evenodd" clip-rule="evenodd"
                             d="M53.4778 56.4328L24.25 79.7679L16.9443 73.9352L42.5193 53.5164L16.9443 33.0976L24.25 27.2649L53.4778 50.6C54.4464 51.3736 54.9906 52.4226 54.9906 53.5164C54.9906 54.6102 54.4464 55.6592 53.4778 56.4328Z"
                             fill="#9852A4" />
                     </svg></button>
-                <button id="btn-before" class="btn-card-game-arrow  arrowLeft">
+                <button class="btn-card-game-arrow  arrowLeft">
                     <svg class="card-game-arrowL" xmlns="http://www.w3.org/2000/svg" width="62" height="99"
                         viewBox="0 0 62 99" fill="none">
                         <path class="arrow" fill-rule="evenodd" clip-rule="evenodd"
