--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -234,7 +234,7 @@
                     </ul>
                     <div class="social-icons">
                         <a href="#"><img src="assets/facebook.svg" alt="Facebook"></a>
-                        <a href="#"><img src="assets/TwitterX Blue.svg" alt="Twitter Icon"></a>
+                        <a href="#"><img src="assets/twitter.svg" alt="Twitter Icon"></a>
                     </div>
                 </div>
             </section>
