--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -61,7 +61,7 @@
 
                 </div>
                 <div class="social-login">
-                    <a href="#" class="icons-social"><img src="assets/" alt="Facebook"
+                    <a href="#" class="icons-social"><img src="assets/facebook.svg" alt="Facebook"
                             class="img-social"></a>
                     <a href="#" class="icons-social"><img src="assets/google.png.jpg" alt="Twitter"
                             class="img-social"></a>
