--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -179,6 +179,86 @@
                 </button>
             </div>
         </div>
+         <main class="galery-game">
+
+        <div class="conteiner-carruselPrimary">
+            <div class="carrusel-titulo">
+                <h3 class="h2-carrusel">¡No te pierdas nuestros últimos lanzamientos!</h3>
+            </div>
+
+            <div class="carrusel-primary">
+                <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardBatman.png" alt=""></div>
+                <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardTheLast.png" alt=""></div>
+                <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
+                </div>
+                <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cardForza.png" alt=""></div>
+                <button class="btn-card-game-arrow  arrowRigth">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="62" height="99" viewBox="0 0 62 99" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M53.4778 56.4328L24.25 79.7679L16.9443 73.9352L42.5193 53.5164L16.9443 33.0976L24.25 27.2649L53.4778 50.6C54.4464 51.3736 54.9906 52.4226 54.9906 53.5164C54.9906 54.6102 54.4464 55.6592 53.4778 56.4328Z"
+                            fill="#9852A4" />
+                    </svg></button>
+                <button class="btn-card-game-arrow  arrowLeft">
+                    <svg class="card-game-arrowL" xmlns="http://www.w3.org/2000/svg" width="62" height="99"
+                        viewBox="0 0 62 99" fill="none">
+                        <path class="arrow" fill-rule="evenodd" clip-rule="evenodd"
+                            d="M53.4778 56.4328L24.25 79.7679L16.9443 73.9352L42.5193 53.5164L16.9443 33.0976L24.25 27.2649L53.4778 50.6C54.4464 51.3736 54.9906 52.4226 54.9906 53.5164C54.9906 54.6102 54.4464 55.6592 53.4778 56.4328Z"
+                            fill="#9852A4" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+
+        <div class="conteiner-carruselPrimary">
+            <div class="carrusel-titulo">
+                <h3 class="h2-carrusel">¡No te pierdas nuestros últimos lanzamientos!</h3>
+            </div>
+
+            <div class="carrusel-primary">
+                <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardAOE.png" alt="">
+                </div>
+                <div class="card-game cardGameSecundary">
+                    <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/cardForza.png" alt="">
+                    </div>
+                    <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/cardMergues.png"
+                            alt="">
+                    </div>
+                    <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/cardNopain.png" alt="">
+                    </div>
+                    <div class="cardSmall-game d|"><img class="card-img-game-small" src="img/card/cardPixel.png "
+                            alt="">
+                    </div>
+                </div>
+                <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardShooker.png"
+                        alt=""></div>
+                <div class="card-game cardGameSecundary">
+                    <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/cardcs.png" alt="">
+                    </div>
+                    <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/cardMergues.png"
+                            alt="">
+                    </div>
+                    <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/CardTheLast.png"
+                            alt="">
+                    </div>
+                    <div class="cardSmall-game d|"><img class="card-img-game-small" src="img/card/cardForza.png" alt="">
+                    </div>
+                </div>
+                <button id="btnNext-carruselSec" class="btn-card-game-arrow  arrowRigth">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="62" height="99" viewBox="0 0 62 99" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M53.4778 56.4328L24.25 79.7679L16.9443 73.9352L42.5193 53.5164L16.9443 33.0976L24.25 27.2649L53.4778 50.6C54.4464 51.3736 54.9906 52.4226 54.9906 53.5164C54.9906 54.6102 54.4464 55.6592 53.4778 56.4328Z"
+                            fill="#9852A4" />
+                    </svg></button>
+                <button id="btnBefore-carruselSec" class="btn-card-game-arrow  arrowLeft">
+                    <svg class="card-game-arrowL" xmlns="http://www.w3.org/2000/svg" width="62" height="99"
+                        viewBox="0 0 62 99" fill="none">
+                        <path class="arrow" fill-rule="evenodd" clip-rule="evenodd"
+                            d="M53.4778 56.4328L24.25 79.7679L16.9443 73.9352L42.5193 53.5164L16.9443 33.0976L24.25 27.2649L53.4778 50.6C54.4464 51.3736 54.9906 52.4226 54.9906 53.5164C54.9906 54.6102 54.4464 55.6592 53.4778 56.4328Z"
+                            fill="#9852A4" />
+                    </svg>
+                </button>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer-container">
