preloader de pagina terminado

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -10,8 +10,32 @@
     <title>Cypher Gaming</title>
 </head>
 
-<body>
+<body class="hidden">
+    <div class="centrado" id="preloader">
+        <div class="loader">
+        <div class="loading-text">
+            Loading<span class="dot">.</span><span class="dot">.</span
+            ><span class="dot">.</span>
+        </div>
+        <div class="loading-bar-background">
+            <div class="loading-bar">
+            <div class="white-bars-container">
+                <div class="white-bar"></div>
+                <div class="white-bar"></div>
+                <div class="white-bar"></div>
+                <div class="white-bar"></div>
+                <div class="white-bar"></div>
+                <div class="white-bar"></div>
+                <div class="white-bar"></div>
+                <div class="white-bar"></div>
+                <div class="white-bar"></div>
+                <div class="white-bar"></div>
+            </div>
+            </div>
+        </div>
+        </div>
 
+    </div>
     <header class="navbar">
 
         <div class="nabvar-hamburguesa">
@@ -320,8 +344,6 @@
             </section>
         </div>
     </footer>
-
-    <script type="text/javascript" src="js/js.js"></script>
+    <script src="preloader.js"></script>
 </body>
-
 </html>
