--- a/TP2/EntregaFinal/html/juego.html
+++ b/TP2/EntregaFinal/html/juego.html
@@ -1,13 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="../css/style.css">
 
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cypher Gaming</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
+
 <body>
-    
+    <main>
+        <header class="navbar">
+            <div class="nabvar-hamburguesa">
+                <a href="" class="nav-link-hamb">
+                    <img class="nav-img-hamburguesa" src="../img/icono/Frame.svg" alt="btn" />
+                </a>
+            </div>
+
+            <div class="navbar-contenedor-logo">
+                <div class="navbar-logo-img">
+                    <a href="">
+                        <img class="navbar-logo" src="../img/logo/logo.png" height="40rem" width="40rem" alt=" logo" />
+                    </a>
+                </div>
+                <div class="navbar-title">CYPHER GAMING</div>
+            </div>
+
+            <div class="conteiner-lupa">
+                <div class="nav-div-input">
+                    <input class="nav-inputText" type="text" placeholder="Buscar juegos..." />
+                </div>
+                <div class="nav-divLupa">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="35" viewBox="0 0 20 20" fill="none">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M9 3.50002C7.54131 3.50002 6.14236 4.07948 5.11091 5.11093C4.07946 6.14238 3.5 7.54133 3.5 9.00002C3.5 10.4587 4.07946 11.8577 5.11091 12.8891C6.14236 13.9206 7.54131 14.5 9 14.5C10.4587 14.5 11.8576 13.9206 12.8891 12.8891C13.9205 11.8577 14.5 10.4587 14.5 9.00002C14.5 7.54133 13.9205 6.14238 12.8891 5.11093C11.8576 4.07948 10.4587 3.50002 9 3.50002ZM2 9.00002C2.00009 7.88069 2.26861 6.7777 2.78303 5.78358C3.29745 4.78946 4.04276 3.9332 4.95645 3.28662C5.87015 2.64004 6.92557 2.22199 8.0342 2.06756C9.14282 1.91312 10.2723 2.0268 11.3279 2.39904C12.3836 2.77129 13.3345 3.39126 14.101 4.20694C14.8676 5.02262 15.4273 6.01022 15.7333 7.08691C16.0393 8.1636 16.0827 9.29798 15.8597 10.3949C15.6368 11.4918 15.154 12.5192 14.452 13.391L17.78 16.72C17.8537 16.7887 17.9128 16.8715 17.9538 16.9635C17.9948 17.0555 18.0168 17.1548 18.0186 17.2555C18.0204 17.3562 18.0018 17.4562 17.9641 17.5496C17.9264 17.643 17.8703 17.7278 17.799 17.7991C17.7278 17.8703 17.643 17.9264 17.5496 17.9641C17.4562 18.0019 17.3562 18.0204 17.2555 18.0186C17.1548 18.0168 17.0555 17.9948 16.9635 17.9538C16.8715 17.9128 16.7887 17.8537 16.72 17.78L13.391 14.452C12.3625 15.2804 11.1207 15.801 9.80901 15.9536C8.49727 16.1062 7.16912 15.8847 5.97795 15.3145C4.78677 14.7444 3.78117 13.849 3.07727 12.7316C2.37338 11.6143 1.99991 10.3206 2 9.00002Z"
+                            fill="#D9D9D9" />
+                    </svg>
+                </div>
+            </div>
+
+            <div class="conteiner-user">
+                <button class="btn-sesion" id="btn-sesion" popovertarget="id-popover">
+                    Iniciar Sesión
+                </button>
+            </div>
+        </header>
+
+        <!-- SCREEN JUEGO -->
+        <div class="game">
+            <div class="breadcrumb">
+                <a href="#">Inicio ></a>
+                <a href="#">Juegos ></a>
+                <a href="#">Estrategia ></a>
+                <a href="#">4 en línea: Batman vs Joker</a>
+            </div>
+
+            <div class="game-canva">
+                <div class="game-content">
+                    <div class="photo-game">
+                        <img class="game-photo" src="../assets/imgGame.png" alt="fotoJuego" />
+                    </div>
+                    <div class="elements-canva-game">
+                        <div class="text-box">
+                            <h1>Batman vs Joker</h1>
+                            <button class="btn-play">Jugar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <section class="info-game">
+                <div class="left">
+                    <img class="logo-pag" src="../img/logo/logo.png" alt="CypherGaming Logo" />
+                </div>
+                <div class="title-game">
+                    <h3>4 en linea: Batman vs Joker</h3>
+                </div>
+                <div class="feedback">
+                    <button class="btn-feedback">
+                        <span class="material-symbols-outlined icons-fdb"> thumb_up </span>
+                        Me gusta
+                    </button>
+                    <button class="btn-feedback">
+                        <span class="material-symbols-outlined icons-fdb"> thumb_down </span>
+                        No Me Gusta
+                    </button>
+                </div>
+
+            </section>
+        </div>
+
+        <!--instrucciones del juego-->
+        <div class="game-info-container">
+            <div class="how-to-play">
+                <h2>¿Cómo jugar?</h2>
+                <ul>
+                    <li>Coloca tus fichas en las columnas del tablero.</li>
+                    <li>Gana conectando 4 fichas de tu color en línea, ya sea horizontal, vertical o diagonalmente.</li>
+                    <li>Usa las teclas de flecha o el mouse para mover y soltar las fichas.</li>
+                    <li>Si necesitas más ayuda puedes ver el siguiente video:
+                        <a
+                            href="https://www.youtube.com/watch?v=JBSbilizg9U">https://www.youtube.com/watch?v=JBSbilizg9U</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="game-images">
+                <h3>Imágenes del juego:</h3>
+                <div class="image-grid">
+                    <img src="assets/imagen1.jpg" alt="Imagen 1 del juego">
+                    <img src="assets/imagen2.jpg" alt="Imagen 2 del juego">
+                    <img src="assets/imagen3.jpg" alt="Imagen 3 del juego">
+                </div>
+            </div>
+        </div>
+
+        <!--recomendados-->
+        <div class="other-games-section">
+            <h2>Otros juegos para ti</h2>
+            <div class="game-card-container">
+                <div class="game-card">
+                    <img src="assets/juego1.jpg" alt="Juego Fellow Traveller">
+                    <div class="game-info">
+                        <button class="play-button">Jugar gratis</button>
+                    </div>
+                </div>
+                <div class="game-card">
+                    <img src="assets/juego2.jpg" alt="Juego Satisfactory 1.0">
+                    <div class="game-info">
+                        <button class="play-button">Jugar gratis</button>
+                    </div>
+                </div>
+                <div class="game-card">
+                    <img src="assets/juego3.jpg" alt="Juego Amber Isle">
+                    <div class="game-info">
+                        <button class="play-button">Jugar gratis</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </main>
 </body>
+
+<footer>
+    <div class="footer-container">
+        <section class="footer-logo">
+            <img src="../assets/logo.jfif" alt="CypherGaming Logo" class="logo-pag" />
+            <p>
+                <span class="word-1">CYPHER</span>
+                <span class="word-2">GAMING</span>
+            </p>
+        </section>
+        <section class="footer-links">
+            <div class="footer-column">
+                <h4>Categorías</h4>
+                <ul>
+                    <li><a href="#">Lanzamientos</a></li>
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Próximos</a></li>
+                    <li><a href="#">Top 100 juegos</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Mi cuenta</h4>
+                <ul>
+                    <li><a href="#">Logros</a></li>
+                    <li><a href="#">Informe</a></li>
+                    <li><a href="#">Historial de compra</a></li>
+                    <li><a href="#">Registro de transacciones</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Acerca de nosotros</h4>
+                <ul>
+                    <li><a href="#">Nuestra historia</a></li>
+                    <li><a href="#">Equipo de trabajo</a></li>
+                    <li><a href="#">Misión y visión</a></li>
+                    <li><a href="#">Contáctanos</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Ayuda</h4>
+                <ul>
+                    <li><a href="#">Soporte</a></li>
+                    <li><a href="#">Problema de comunicación</a></li>
+                    <li><a href="#">Preguntas Frecuentes (FAQ)</a></li>
+                    <li><a href="#">Términos y condiciones</a></li>
+                </ul>
+            </div>
+            <div class="footer-column">
+                <h4>Comunidad</h4>
+                <ul>
+                    <li><a href="#">Foros</a></li>
+                    <li><a href="#">Noticias de la comunidad</a></li>
+                </ul>
+                <div class="social-icons">
+                    <a href="#"><img src="../assets/facebook.svg" alt="Facebook" /></a>
+                    <a href="#"><img src="../assets/twitter.svg" alt="Twitter Icon" /></a>
+                </div>
+            </div>
+        </section>
+    </div>
+</footer>
+
 </html>
