avance screen juego

--- a/TP2/EntregaFinal/html/juego.html
+++ b/TP2/EntregaFinal/html/juego.html
@@ -88,7 +88,7 @@
                         Me gusta
                     </button>
                     <button class="btn-feedback">
-                        <span class="material-symbols-outlined icons-fdb"> thumb_down </span>
+                        <span class="material-symbols-outlined icons-fdñb"> thumb_down </span>
                         No Me Gusta
                     </button>
                 </div>
