--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -62,12 +62,18 @@
                 </svg>
             </div>
         </div>
-
+<!--
         <div class="conteiner-user">
             <button class="btn-sesion" id="btn-sesion" popovertarget="id-popover">
                 Iniciar Sesión
             </button>
         </div>
+-->
+        <button class="pushable" id="btn-sesion" popovertarget="id-popover">
+            <span class="shadow"></span>
+            <span class="edge"></span>
+            <span class="front"> Push Me </span>
+          </button>
 
         <!--aca va el pop de iniciar sesion-->
 
@@ -131,7 +137,9 @@
     </header>
     <main class="galery-game">
         <!-- ---------------------------Toogle Menu--------------- -->
-        <nav class="vertical-nav-wrapper  ">
+   
+        <nav class="vertical-nav-wrapper"> 
+            
             <div class="vertical-CategoriaNav">
                 <a class="link-hambur " href="">
                     <img class="icon-hambur" src="assets/home.svg" alt="Inicio">
