cambio detalles en clase

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -83,7 +83,7 @@
                 <form class="form-singin" action="#" method="POST">
                     <input class="inputs" type="email" name="email" placeholder="Ingrese su correo" required>
                     <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña" required>
-                    <button class="btn-primary" type="submit" popovertarget="id-popover">Iniciar Sesión</button>
+                    <button class="btn-primary" type="submit" popovertarget="id-popover">">Iniciar Sesión</button>
                 </form>
 
                 <div class="social-login">
