refactor details header

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -62,19 +62,10 @@
                 </svg>
             </div>
         </div>
-<!--
-        <div class="conteiner-user">
-            <button class="btn-sesion" id="btn-sesion" popovertarget="id-popover">
-                Iniciar Sesión
+        <div class="btn_ini_sesion" >
+            <button class="btn" id="btn-sesion" popovertarget="id-popover"> Iniciar Sesion
             </button>
         </div>
--->
-        <button class="pushable" id="btn-sesion" popovertarget="id-popover">
-            <span class="shadow"></span>
-            <span class="edge"></span>
-            <span class="front"> Push Me </span>
-          </button>
-
         <!--aca va el pop de iniciar sesion-->
 
         <div class="login-container" popover="manual" id="id-popover">
