refactor login/register

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -74,7 +74,7 @@
                 <form class="form-singin" action="#" method="POST">
                     <input class="inputs" type="email" name="email" placeholder="Ingrese su correo" required>
                     <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña" required>
-                    <button class="btn-primary" type="submit" popovertarget="id-popover">">Iniciar Sesión</button>
+                    <button class="btn-primary" type="submit" popovertarget="id-popover">Iniciar Sesión</button>
                 </form>
 
                 <div class="social-login">
@@ -82,7 +82,7 @@
 
                 </div>
                 <div class="social-login">
-                    <a href="#" class="icons-social"><img src="assets/facebook.svg" alt="Facebook"
+                    <a href="#" class="icons-social"><img src="assets/facebook.png.jpg" alt="Facebook"
                             class="img-social"></a>
                     <a href="#" class="icons-social"><img src="assets/google.png.jpg" alt="Twitter"
                             class="img-social"></a>
@@ -97,7 +97,7 @@
             <!-- aca el register-->
 
             <div class="login-container" id="id-popover-2" popover="manual" id="login-container">
-                <div class="login-box">
+                <div class="login-box2">
                     <h2 class="sesion-text">Registrarse</h2>
                     <form class="form-singup" action="#" method="POST">
                         <input class="inputs" type="text" name="name" placeholder="Ingrese su nombre completo" required>
@@ -108,8 +108,7 @@
                             required>
                         <input class="inputs" type="password" name="password" placeholder="Confirme su contraseña"
                             required>
-                        <input class="date-birthdate" type="date" name="birthdate" id="fecha_nacimiento"
-                            min="1900-01-01" max="2024-12-31" required>
+                        <input class="inputs" required="" placeholder="Enter birth date" type="date">
                         <button class="btn-primary" type="submit" id="id-popover">Iniciar Sesión</button>
                     </form>
 
