cambio y adaptacion de botones

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -70,11 +70,18 @@
 
         <div class="login-container" popover="manual" id="id-popover">
             <div class="login-box">
-                <h2 class="sesion-text">Iniciar Sesión</h2>
+                <div class="close-tittle">
+                    <h2 class="sesion-text">Iniciar Sesión</h2>
+                        <button class="button-close">
+                            <span class="X"></span>
+                            <span class="Y"></span>
+                            <div class="close">Close</div>
+                        </button>  
+                </div>                
                 <form class="form-singin" action="#" method="POST">
                     <input class="inputs" type="email" name="email" placeholder="Ingrese su correo" required>
                     <input class="inputs" type="password" name="password" placeholder="Ingrese su contraseña" required>
-                    <button class="btn-primary" type="submit" popovertarget="id-popover">Iniciar Sesión</button>
+                    <button class="btn" type="submit" popovertarget="id-popover">Iniciar Sesión</button>
                 </form>
 
                 <div class="social-login">
@@ -91,7 +98,7 @@
                 <div class="register">
                     <div class="txt-login2">Si no tienes cuenta regístrate aquí</div>
                 </div>
-                <button class="btn-primary" popovertarget="id-popover-2">Registrarse</button>
+                <button class="btn" popovertarget="id-popover-2">Registrarse</button>
             </div>
 
             <!-- aca el register-->
@@ -109,7 +116,7 @@
                         <input class="inputs" type="password" name="password" placeholder="Confirme su contraseña"
                             required>
                         <input class="inputs" required="" placeholder="Enter birth date" type="date">
-                        <button class="btn-primary" type="submit" id="id-popover">Iniciar Sesión</button>
+                        <button class="btn" type="submit" id="id-popover">Iniciar Sesión</button>
                     </form>
 
                     <div class="social-login">
@@ -120,7 +127,7 @@
                     </div>
                     <hr class="line">
 
-                    <button class="btn-primary" popovertarget="id-popover-2">Registrarse</button>
+                    <button class="btn" popovertarget="id-popover-2">Registrarse</button>
                 </div>
             </div>
 
@@ -256,7 +263,7 @@
                         <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/cardNopain.png"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game d|"><img class="card-img-game-small" src="img/card/cardPixel.png "
+                        <div class="cardSmall-game d"><img class="card-img-game-small" src="img/card/cardPixel.png "
                                 alt="">
                         </div>
                     </div>
