agregado de imagenes en cards

--- a/TP2/EntregaFinal/index.html
+++ b/TP2/EntregaFinal/index.html
@@ -304,13 +304,13 @@
                 </div>
 
                 <div class="carrusel-primary">
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardBatman.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cr.jpg" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardTheLast.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/sub.png" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/CardMinecraft.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/marvekl.jpg" alt="">
                     </div>
-                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cardForza.png" alt="">
+                    <div class="card-game cardGame"> <img class="card-img-game" src="img/card/cartas.png" alt="">
                     </div>
                     <button class="btn-card-game-arrow  arrowRigth">
                         <svg xmlns="http://www.w3.org/2000/svg" width="62" height="99" viewBox="0 0 62 99" fill="none">
@@ -335,24 +335,24 @@
                 </div>
 
                 <div class="carrusel-primary">
-                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardAOE.png"
+                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/poke.jpg"
                             alt="">
                     </div>
                     <div class="card-game cardGameSecundary">
-                        <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/cardForza.png"
+                        <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/test2.jpg"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/cardMergues.png"
+                        <div class="cardSmall-game b"><img class="card-img-game-small" src="img/card/ml2.png"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/cardNopain.png"
+                        <div class="cardSmall-game c"><img class="card-img-game-small" src="img/card/cc.jpg"
                                 alt="">
                         </div>
-                        <div class="cardSmall-game d|"><img class="card-img-game-small" src="img/card/cardPixel.png "
+                        <div class="cardSmall-game d"><img class="card-img-game-small" src="img/card/preguntados.png "
                                 alt="">
                         </div>
                     </div>
-                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/CardShooker.png"
+                    <div class="card-game cardGameSecundary"> <img class="card-img-game" src="img/card/candyCrush.png"
                             alt=""></div>
                     <div class="card-game cardGameSecundary">
                         <div class="cardSmall-game a"><img class="card-img-game-small" src="img/card/cardcs.png" alt="">
